# optulus-anchor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  llm.txt  llms-full.txt  llms.txt  pyproject.toml
examples/: __init__.py  langgraph.py
examples/langchain_optulus_anchor/: __init__.py  main.py  requirements.txt  tools.py
examples/langgraph_optulus_anchor/: __init__.py  graph.py  main.py  requirements.txt  tools.py
src/optulus_anchor/: __init__.py  arg_binding.py  cli.py  decorators.py  exceptions.py  logger.py  tracelog.py  validator.py
src/optulus_anchor/integrations/: __init__.py  _correction_ctx.py  _tool_runtime.py  langchain_tool_executor.py  langgraph_tool_node.py
tests/: conftest.py  test_cli_report.py  test_langchain_tool_executor.py  test_langgraph_tool_node.py  test_self_correction.py  test_tracelog.py  test_validate_tool.py  test_validate_tool_edge_cases.py  test_validate_tool_fuzz.py  test_validate_tool_response_edge_cases.py
