[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optulus-anchor"
version = "0.1.0"
description = "SDK skeleton with validate_tool decorator"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["hypothesis>=6.0", "pytest>=7.0"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s %(name)s:%(message)s"
