[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optulus-anchor"
version = "0.2.1"
description = "SDK skeleton with validate_tool decorator"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["pydantic>=2.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
anchor = "optulus_anchor.cli:main"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=7.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.3.0"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s %(name)s:%(message)s"
